--- a/server/index.html
+++ b/server/index.html
@@ -1,15 +1,15 @@
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="styles.css">
-		<link rel="stylesheet" type="text/css" href="skeleton/css/skeleton.css">
-		<link rel="stylesheet" type="text/css" href="skeleton/css/normalize.css">
+		<link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap-theme.css">
 	</head>
-	<body>
+	<body style="padding-top: 70px;">
 		<div class="container">
 			<div id="app"></div>
 		</div>
 
 		<script src="app.js" ></script>
+		<script src="//localhost:35729/livereload.js"></script>
 	</body>
 </html>
 
